@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r1p16
+  {
+    Modules = LHCbDIRAC:v9r1p16, LHCbWebDIRAC:v4r4p6
+    Depends = DIRAC:v6r19p21
+    LcgVer = v13r0
+  }
+
   v9r1p15
   {
     Modules = LHCbDIRAC:v9r1p15, LHCbWebDIRAC:v4r4p6
